--- a/_data/upcoming.yml
+++ b/_data/upcoming.yml
@@ -1,11 +1,7 @@
 - name: Barcamp Mandalay
   img: mandalay/2015.jpg
-  date: July 
-
-- name: Barcamp Lashio
-  img: barcamp_lashio_2012.jpg
-  date: July
+  date: June 27 & 28
 
 - name: Barcamp Pyay
   img: barcamp_pyay_2012.jpg
-  date: July
+  date: July 11 & 12
