--- a/_data/upcoming.yml
+++ b/_data/upcoming.yml
@@ -5,3 +5,7 @@
 - name: Barcamp Pyay
   img: barcamp_pyay_2012.jpg
   date: July 11 & 12
+
+- name: TU Barcamps
+  img: coming_soon.svg
+  date: near future :)
